# vsomeip-ros-bridge

./: .clang-format  .gitignore  .gitpod.yml  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  LICENSE  Makefile  README  README.md  docker-compose.yml
.github/workflows/: makefile.yml
cmake/: FindCommonAPITools.cmake
config/: init-client.sh  init-server.sh  vsomeip-client.json  vsomeip-server.json
simulation/: README.md  gnss-sentences.nmea
source/client/: main.cpp
source/idl/: gnss.fdepl  gnss.fidl  types.fidl
source/server/: main.cpp
src/franca2ros/: readme.md  setup.py
src/franca2ros/franca2ros/scripts/: fidl2ros.py
src/franca2ros/franca2ros/translator/: translator.py
src/franca2ros/franca2ros/translator/templates/: message.msg.j2
src/gnss-bridge/: CMakeLists.txt  package.xml
src/gnss-bridge/src/: abstract_someip_client.h  main.cpp  someip_publisher.h
src/gnss-listener/: CMakeLists.txt
src/gnss-provider/: CMakeLists.txt  package.xml
src/gnss-provider/src/: gnss_someip.h  gpsd_client.h  main.cpp
src/gnss-ros-lib/: CMakeLists.txt  package.xml
src/gnss-ros-lib/src/: Dop.msg  Fix.msg  GpsData.msg
src/gnss-someip-lib/: CMakeLists.txt  package.xml
src/gnss-someip-lib/cmake/: FindCommonAPITools.cmake  FindFrancaRosTools.cmake
src/gnss-someip-lib/config/: commonapi.ini.in
src/gnss-someip-lib/src/: gnss.fdepl  gnss.fidl  types.fidl
src/gnss-someip-lib/src/fidl/: gnss.fidl
src/gnss-someip-lib/src/types/: conversion.h
src/gnss_listener/: CMakeLists.txt  package.xml
src/gnss_listener/src/: main.cpp
